# ASPSU-Projects

./: .gitignore  README.md
Perception/Demos/: BNO055_acceleration.py  BNO055_gyro.py  M8030_gps.py  Perspective_projection.py  Perspective_projection_intrinsic.py  Perspective_projection_verification.py  Stereo_matching.py
Perception/Projekt/: 1 Point projection and coordinate transformation.ipynb  1 Point projection and coordinate transformation.py  2 Stereo Disparity Map.ipynb  2 Stereo Disparity Map.py  3 LiDAR Data and ICP.ipynb  Project_work_2025.docx  Project_work_2025_JakobKurz.docx  Project_work_2025_LukasGerstlauer.docx  Project_work_2025_part_1_2.docx  requirements.txt
Perception/Projekt/Additional_files/: Camera.txt
Perception/Projekt/Additional_files/Lidar_data/: 0000000020.pcd  0000000030.pcd
Perception/Tasks/: CoordinateProjection.py  CoordinateProjection_skew.py  CoordinateProjection_skew_transform.py  DopplerFrequency.py  Stereovision depth.py  Ultrasonic Sensor.py
Situation Understanding/: Beobachtbarkeit_robot_estimator.m  Flowchart EKF.drawio  Präsentation Kalmanfilter.pptx  Template_Beobachtbarkeit.m
Situation Understanding/src/ekf_tracker_msgs/: CMakeLists.txt  package.xml
Situation Understanding/src/robot_estimator/: package.xml  setup.py
Situation Understanding/src/robot_estimator/config/: visualization.rviz
Situation Understanding/src/robot_estimator/launch/: Visualization.launch.py  simulation.launch.py
Situation Understanding/src/robot_estimator/robot_estimator/: cameraDetectionNode.py  code.txt  ekf.py  ekfNode.py  ekf_logger_node.py  lidarDetectionNode.py  robotControllerNode.py  visualizationNode.py
Situation Understanding/src/robot_msgs/: CMakeLists.txt  package.xml
Situation Understanding/src/robot_msgs/msg/: LidarArray.msg
src/robot_estimator/: setup.cfg
src/robot_estimator/config/: visualization.rviz
src/robot_estimator/robot_estimator/: robotControllerNode.py  state_estimator.py
(+299 files in other folders)
